[package]
name = "boofind"
version = "0.1.0"
edition = "2021"
authors = ["jane <jjt1525@outlook.com>"]
description = "search and download books in terminal"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
nom = "7.1.3"
open = "5.0.0"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
reqwest = { version = "0.11.20", features = ["blocking"] }
scraper = "0.17.1"
threadpool = "1.8.1"
tui-textarea = { version = "0.2.2", features = ["ratatui-crossterm"], default-features = false }
